[package]
name = "zombiedodgeball"
version = "0.1.0"
authors = ["Horup <sah@sah.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
cgmath = "0.17.0"
image = "0.23.10"
gamestate = {git = "https://github.com/horup/gamestate-rs.git", branch = "main"}
uuid = {version = "0.8.1", features = ["v4"]}